src/objects/Audit__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Item_Description__c</fullName>
        <description>Short name describing Audit description</description>
        <inlineHelpText>Enter a brief description of the audit overview</inlineHelpText>
        <label>Audit Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditors_Comments_on_Assessment__c</fullName>
        <label>Auditors Comments on Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Assessment__c</fullName>
        <label>Date of Last Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Assessment__c</fullName>
        <label>Date of Next Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <controllingField>Reason_For_Audit__c</controllingField>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Two Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Three Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <label>Issue ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_Achieved_Auditor__c</fullName>
        <label>Objective Achieved - Auditor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <inlineHelpText>kjfds  ieur</inlineHelpText>
        <label>Operations</label>
        <picklist>
            <picklistValues>
                <fullName>Other fraud controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reconciliation of accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>segregation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Audit__c</fullName>
        <label>Reason For Audit</label>
        <picklist>
            <picklistValues>
                <fullName>Periodic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issues Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk/Control Variation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Auditor__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Audit_Item_Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_of_Last_Assessment__c</columns>
        <columns>Date_of_Next_Assessment__c</columns>
        <columns>Frequency__c</columns>
        <columns>Reason_For_Audit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Element Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit</pluralLabel>
    <recordTypes>
        <fullName>Audit_layout</fullName>
        <active>true</active>
        <label>Audit layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physicians_Insurance</fullName>
        <active>true</active>
        <label>Physicians Insurance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>